Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23561

Spider doesn't work with ps protocol

    XMLWordPrintable

Details

    Description

      mtr --ps spider/bugfix.checksum_table_with_quick_mode_3

      Crashes with:
      mariadbd: /my/maria-10.6/sql/sql_prepare.cc:4098: bool Prepared_statement::prepare(const char*, uint): Assertion `thd->transaction->stmt.is_empty()' failed.

      Works without --ps

      The reason for the crash is that in 10.5 one must protect new Independent transactions with 'start_new_trans', which spider doesn't do. This was done to support transactional store engines (and Aria) for MariaDB system tables.

      Attachments

        Activity

          People

            Kentoku Kentoku Shiba (Inactive)
            monty Michael Widenius
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1d Original Estimate - 1d
                1d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d 7h
                1d 7h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.