MDEV-23561 Spider doesn't work with ps protocol