storage/spider/spd_db_conn.cc
@@ -10036,9 +10036,9 @@ int spider_db_open_item_string(
   if (str)
   {
     THD *thd = NULL;
-    TABLE *table;
+    TABLE *UNINIT_VAR(table);
     my_bitmap_map *saved_map = NULL;
-    Time_zone *saved_time_zone;
+    Time_zone *UNINIT_VAR(saved_time_zone);
     String str_value;
     char tmp_buf[MAX_FIELD_WIDTH];
     spider_string tmp_str(tmp_buf, MAX_FIELD_WIDTH, str->charset());
@@ -10761,7 +10761,7 @@ int spider_db_udf_direct_sql(
 #else
   if (direct_sql->real_table_used)
   {
-    if (spider_sys_open_tables(c_thd, &direct_sql->table_list_first,
+    if (spider_sys_open_and_lock_tables(c_thd, &direct_sql->table_list_first,
                                &direct_sql->open_tables_backup))
     {
       direct_sql->real_table_used = FALSE;
